@startuml Smart_Energy_Manager

skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam shadowing false

' ══════════════════════════════
'           ENUM
' ══════════════════════════════
interface IModel<T> {
    - int id;
    + void setId(int id);
    + int getId();
    + String toCSV();
    + T fromCSV(String[] fields);
}
' ===============================
' DAO
' ===============================
interface IDAO<T> {
- static int idSequence
+ create(T object): T
+ getById(int id): T
+ getAll(): List<T>
+ remove(T object): T
+ update(T object): T
}

class DAO<T extends IModel<T>> {

+ create(IModel building): IModel
+ getById(int id): IModel
+ getAll(): List<IModel>
+ remove(IModel building): IModel
+ update(IModel building): IModel
}
' ================================
' Organization
'=================================


class Organization {
    #int id
    - String name
    - String owner
    - List<Building> buildings
    - int numberOfBuildings
    + addBuilding(b: Building): void
    + removeBuilding(b: Building): void
    + getBuildings(): List<Building>
    + getTotalConsumption(): double
    + getEstimatedCost(): double
    + getMostConsumingBuilding(): Building
    + getDailyConsumption(): double
    + getMonthlyConsumption(): double
    + getAnnualConsumption(): double
}
class University {
    - numberOfStudents: int

}
' ══════════════════════════════
'   BUILDING (classe abstraite)
' ══════════════════════════════

class Building {
  # int id
  # String name
  # String address
  # double surface
  # List<Energy> energyTypes
  + addEnergy(e: Energy): void
  + removeEnergy(e: Energy): void
  + getEnergyTypes(): List<Energy>
  + getTotalConsumption(): double
  + getEstimatedCost(): double
}

' ══════════════════════════════
'    SOUS-CLASSES DE BUILDING
' ══════════════════════════════

class House {
  - int numberOfRooms
  - boolean hasGarden
}

class Apartment {
  - int floor
  - String residenceName
}

class Office {
  - int numberOfRooms
  - int numberOfEmployees
}

class Shop {
  - String activitySector
}

' ══════════════════════════════
'   ENERGY (classe abstraite)
' ══════════════════════════════

class Energy {
  # int id
  # LocalDate date
  # double quantity
  # double pricePerUnit
  + getEstimatedCost(): double
  + getDate(): LocalDate
  + getQuantity(): double
}

class Electricity {
  - boolean isOffPeak
  + getEstimatedCost(): double
}

class Water {
  - boolean isHotWater
  + getEstimatedCost(): double
}

class Gas {
  + getEstimatedCost(): double
}

class Climatisation {
  - double targetTemperature
  + getEstimatedCost(): double
}

' ══════════════════════════════
'           ALERT
' ══════════════════════════════

class Alert {
  - String message
  - AlertLevel level
  - LocalDate date
  - boolean isRead
  + markAsRead(): void
}

' ══════════════════════════════
'   DASHBOARD (vue principale)
' ══════════════════════════════

class Dashboard {
  - List<Organisazion> organizations
  + getAlerts(): List<Alert>
}



' ══════════════════════════════
'     IMPORT / EXPORT / TEST
' ══════════════════════════════

class CSVHandler {
  - String filename
  + void write(String row)
  + void write(String[] rows)
  + void remove(int id)
  + String update(int id, String newRow)
  - void flushFile(String[] rows)
  + String getLastRow()
  + String[] read()
}

class SceneManager {
    -Stage mainStage
    - Scene actualScene
    -FXMLLoader lastLoader
    +SceneManager(Stage stage)
    +setMainStage(Stage mainStage)
    + Controller switchTo(String view)
   + Scene loadScene(String view)
   + Controller getSceneController()
   - FXMLLoader loadPath(String views)
}

' ===============================
' Controllers
' ===============================
abstract class Controller {
    - SceneManager sceneManager
    + setSceneManager(SceneManager sceneManager)
}
interface ICrudController {
    +index()
    + add()
    + modify()
    + remove()
}
class CrudController {
    -Button createButton
    -Button modifyButton
    -Button deleteButton
    -Map<Button, Runnable> buttonAction
    #initialize()
    +index()
    + add()
    + modify()
    + remove()
    <<FXML>> - onClick(ActionEvent event)
}

class BuildingCrudController {
}

class EnergyCrudController {
}

class OrganizationCrudController {
}

' POPUP
class PopupController {
    <<FXML>> - VBox contentBox
    <<FXML>> # Button submitButton
    <<FXML>> - Button cancelButton
    <<FXML>> - onCancel()
    <<FXML>> - onSave()
}
class FormPopupController {
    - Map<String, FormInputController> fields
    - Runnable onSubmitAction
    <<FXML>> + Label nameLabel
    <<FXML>> - VBox contentBox
    + addField(String name, String labelText)
    + setPopupName(String name)
    + getValues(String name)
    + setOnSubmitAction(Runnable action)
    <<FXML>> - onFormSave()
}

class FormInputController {
    <<FXML>> - Label inputName
    <<FXML>> - TextField inputField
    + String getValue()
    + setText(String inputName)
}

' ==============================
' Views
' ==============================
class BuildingView <<FXML_VIEW>> {

}
class OrganizationView <<FXML_VIEW>> {
}

class EnergyView <<FXML_VIEW>> {
}

' ══════════════════════════════
'           RELATIONS
' ══════════════════════════════

'Heritage de Model
IModel <|-- Organization
IModel <|-- Building
IModel <|-- Energy
' Héritage Organization
Organization <|-- University
' Héritage Building
Building <|-- House
Building <|-- Apartment
Building <|-- Office
Building <|-- Shop


' Héritage Energy
Energy <|-- Electricity
Energy <|-- Water
Energy <|-- Gas
Energy <|-- Climatisation

' Héritage DAO
IDAO <|-- DAO


' Composition
Dashboard "1" *-- "0..*" Organization: gère
Organization "0..*" *-- "0..*" Building : possèdent
Building  "1" *-- "0..*" Energy   : enregistre
Building  "1" *-- "0..*" Alert    : génère

' Dépendances utilitaires
CSVHandler   ..> DAO  : importe/exporte

' MVC
SceneManager ..> Controller: Gère le changement de scène des
Controller <|-- CrudController
ICrudController <|-- CrudController
EnergyCrudController  <-- DAO: utilise
EnergyCrudController <-- EnergyView: met à jour
BuildingCrudController <-- DAO: utilise
BuildingCrudController <-- BuildingView: met à jour
OrganizationCrudController <-- OrganizationDAO: utilise
OrganizationCrudController <-- OrganizationView: met à jour

' Popup
Controller <|-- PopupController
Controller <|-- FormInputController
PopupController <|-- FormPopupController
FormPopupController ..> FormInputController: utilise
@enduml

